--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <p>It was a dark and stormy night...</p>
-	<p>It was blustery and cold.</p>
+        <p>It was a dark and stormy night...
+	It was blustery and cold.<br> Cheryl was up..and...<em>thriving</em></p>
     </body>
 </html>
