added 4rth line

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
         <p>It was a dark and stormy night...
-	It was blustery and cold.<br> Cheryl was up..and...<em>thriving</em></p>
+	It was blustery and cold.<br> Cheryl was up..and...<em>thriving.</em><br>
+	She was missing her left shoe, and her toes were blue.</p>
     </body>
 </html>
