the plot thickens...agian!

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <body>
+        <h1>A Harrowing Tale of Cheryl Schaefer: Part Human, Part Program</h1>
         <p>It was a dark and stormy night...
 	It was blustery and cold.<br> Cheryl was up..and...<em>thriving.</em><br>
-	She was missing her left shoe, and her toes were blue.</p>
+	She was missing her left shoe, and her toes were blue.<br> She broke into a cold sweat of existentialism.<br> "Am I even human?", she thought.</p>
     </body>
 </html>
