--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <h1>A Harrowing Tale of Cheryl Schaefer: Part Human, Part Program</h1>
         <p>It was a dark and stormy night...
 	It was blustery and cold.<br> Cheryl was up..and...<em>thriving.</em><br>
-	She was missing her left shoe, and her toes were blue.<br> She broke into a cold sweat of existentialism.<br> "Am I even human?", she thought.</p>
+	She was missing her left shoe, and her toes were blue.<br> She broke into
+	 a cold sweat of existentialism.<br> "Am I even human?", she thought, as she stubbed <br>
+	frozen toes on her half-empty bottle of peach schnapps and fell into an infinite loop.</p>
     </body>
 </html>
