--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <p>It was a dark and stormy night...
 	It was blustery and cold.<br> Cheryl was up..and...<em>thriving.</em><br>
 	She was missing her left shoe, and her toes were blue.<br> She broke into
-	 a cold sweat of existentialism.<br> "Am I even human?", she thought, as she stubbed <br>
-	frozen toes on her half-empty bottle of peach schnapps and fell into an infinite loop.</p>
+	 a cold sweat of existentialism.<br> "Am I even human?", she thought, as she stubbed her<br>
+	frozen toes on a half-empty bottle of peach schnapps and fell into an infinite loop.<br><em><strong>Could this story get any worse?</strong></em><
+        <br> Turns out...maybe../p>
     </body>
 </html>
