--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	frozen toes on a half-empty bottle of peach schnapps and fell into an infinite loop
 	.<br><em><strong>Could this story get any worse?</strong></em>
         <br> Turns out...maybe..<br>
-	...<br>...<br>...the <em>Schnapps</em> got left behind :(</p>
+    ...<br>...<br>...the <em>Schnapps</em> got left behind :(<br><br>Story and concept by Shym Possible and Dale Hopper<br>
+<h5>inspired by the true story of Cheryl Schaefer</h5>
+<h6>copyright 2018</h6>></p>
     </body>
 </html>
