--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
+  <head>	
     <body>
         <h1>A Harrowing Tale of Cheryl Schaefer: Part Human, Part Program</h1>
         <p>It was a dark and stormy night...
