--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
   <head>	
     <body>
         <h1>A Harrowing Tale of Cheryl Schaefer: Part Human, Part Program</h1>
